--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/bookings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/bookings.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container">
         <!-- THIS MENU VISIBLE ONLY ON DESCTIOP SCREEN-->
-        <ul class="categories-menu">
+        <!--<ul class="categories-menu">
             <li class="menu-block"><a href="/messages">Messages</a></li>
             <li class="menu-block"><a href="/enquiries">Enquiries</a></li>
             <li class="menu-block"><a href="/bookings" class="active">Bookings</a></li>
@@ -12,7 +12,8 @@
             <li class="menu-block"><a href="/prices">Prices</a></li>
             <li class="menu-block"><a href="/reports">Reports</a></li>
             <li class="menu-block"><a href="/feedbacks">Feedbacks</a></li>
-        </ul>
+        </ul>-->
+        {% include "ActedLegalDocsBundle:ChatRoom:dashboardmenu.html.twig" %}
 
         <div class="summary_block">
             <p class="heading">Summary</p>
