--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
@@ -3,8 +3,8 @@
     <li class="menu-block"><a href="{{ path('chat_room_list') }}">Enquiries</a></li>
     <li class="menu-block"><a href="{{ path('bookings') }}">Bookings</a></li>
     <li class="menu-block"><a href="/dashboard/agenda">Agenda</a></li>
-    <li class="menu-block"><a href="/dashboard/prices">Prices</a></li>
-    <li class="menu-block"><a href="/dashboard/payment">Payment & Accounts</a></li>
+    <li class="menu-block"><a href="{{ path('prices') }}">Prices</a></li>
+    <li class="menu-block"><a href="/˚/payment">Payment & Accounts</a></li>
     <li class="menu-block"><a href="/dashboard/technicalreq">Technical Requirements</a></li>
     <li class="menu-block"><a href="/dashboard/feedbacks">Feedbacks</a></li>
 </ul>
@@ -18,7 +18,7 @@
         <li class="menu-block"><a href="{{ path('chat_room_list') }}">Enquiries</a></li>
         <li class="menu-block"><a href="{{ path('bookings') }}">Bookings</a></li>
         <li class="menu-block"><a href="/dashboard/agenda">Agenda</a></li>
-        <li class="menu-block"><a href="/dashboard/prices">Prices</a></li>
+        <li class="menu-block"><a href="{{ path('prices') }}">Prices</a></li>
         <li class="menu-block"><a href="/dashboard/payment">Payment & Accounts</a></li>
         <li class="menu-block"><a href="/dashboard/technicalreq">Technical Requirements</a></li>
         <li class="menu-block"><a href="/dashboard/feedbacks">Feedbacks</a></li>
