--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/how-it-works.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/how-it-works.css
@@ -3,9 +3,9 @@
 .how-it-works h2 {
     color: #3d4248;
     font-size: 40px;
-    font-family: UbuntuBold;
-    text-transform: uppercase;
+    font-family: Ubuntu;
     font-weight: 600;
+    text-transform: uppercase;
     margin-top: 30px;
 }
 
