--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/search.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/search.css
@@ -1,5 +1,6 @@
 .block h2 {
-    font-family: UbuntuBold;
+    font-family: Ubuntu;
+    font-weight: 600;
     font-size: 21px;
     color: #424242;
     line-height: 24px;
@@ -208,7 +209,8 @@
 }
 
 .results-header h1 {
-    font-family: UbuntuMedium;
+    font-family: Ubuntu;
+    font-weight: 500;
     font-size: 21px;
     color: #424242;
     line-height: 17px;
@@ -336,7 +338,8 @@
 }
 
 .results-content .slider .title {
-    font-family: UbuntuMedium;
+    font-family: Ubuntu;
+    font-weight: 500;
     font-size: 15px;
     color: white;
     line-height: 18px;
@@ -372,7 +375,8 @@
 
 .profile-card .card-title {
     text-align: center;
-    font-family: UbuntuBold;
+    font-family: Ubuntu;
+    font-weight: 600;
     margin-bottom: 2px;
     margin-top: 4px;
 }
