fix adding comment when create new comment for extra performance

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -523,7 +523,7 @@
             </div>
             <div class="row package">
                 <div extra-performance-comment style="display: none">
-                    <textarea name="comment" class="quote-comment-box extra" placeholder="Describe this extra"></textarea>
+                    <textarea edit-performance-comment name="comment" class="quote-comment-box extra" placeholder="Describe this extra"><%=curPerf.comment%></textarea>
                 </div>
             </div>
         </div>
