Feedbacks to profile

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
@@ -13,8 +13,8 @@
     <section id="feedbacks" class="profile-block feedbacks">
         <div class="title">
                 <span>
-                    {{ artist.ratings|length }}
-                    {% if artist.ratings|length <= 1 %}
+                    {{ artist.feedbacks|length }}
+                    {% if artist.feedbacks|length <= 1 %}
                     Feedback
                     {% else %}
                     Feedbacks
