--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -161,7 +161,7 @@
     <div class="modal-body">
         <div class="row clearfix">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                <label for="quot_event_name">Name event</label>
+                <label for="quot_event_name">Event name</label>
                 <input type="text" class="form-control" id="quot_event_name" placeholder="Name your event" name="event_name" value="<%=data.model.title%>" <%=disabled%> >
             </div>
         </div>
@@ -445,7 +445,7 @@
             <option <% if(balancePercent == 100) { %> selected <% } %> value="100">100%</option>
         </select>
 
-        <span>Guaranteed deposit to be paid with <b>Acted Escrow Account</b> now to confirm the booking</span>
+        <span>guaranteed Deposit payment on <b>Escrow Account</b></span>
     </div>
 
     <div class="row payment-deposit-info">
