--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/feedback.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/feedback.css
@@ -130,7 +130,7 @@ margin: 0 0 0 47px;**/
     margin: 0;
     padding: 0;
     list-style-type: none;
-    margin: 0 0 0 41px;
+    margin: 0 41px 0 41px;
 }
 .dashboard.client ul,
 .dashboard.client ul li {
