--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/feedback.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/feedback.css
@@ -168,6 +168,7 @@ margin: 0 0 0 47px;**/
     text-overflow: ellipsis;
     white-space: nowrap;
     vertical-align: middle;
+    cursor: pointer;
 }
 .dashboard.client .events-menu .event-item a {
     font-family: LatoRegular;
@@ -299,6 +300,11 @@ margin: 0 0 0 47px;**/
     font-size: 13px;
     color: rgba(0, 0, 0, 0.65);
 }
+
+button[disabled]{
+    background: #DFE0E0;
+}
+
 .dashboard.client .comment-area textarea {
     border: 2px solid rgba(229, 229, 229, 1);
     border-radius: 11px;
