Remove padding from price box to show full price. 30/11/2016 12:04 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
@@ -384,6 +384,7 @@
     display: inline-block;
     vertical-align: middle;
     text-align: center;
+    padding-right: 0;
 }
 
 .quotation-modal .extra-block-options .price-box {
