--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
@@ -384,7 +384,7 @@
     display: inline-block;
     vertical-align: middle;
     text-align: center;
-    padding-right: 0;
+    padding-right: 0 !important;
 }
 
 .quotation-modal .extra-block-options .price-box {
