--- a/src/Acted/LegalDocsBundle/Resources/views/Email/new_feedback_notify.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Email/new_feedback_notify.html.twig
@@ -1,11 +1,11 @@
 {% block subject %}
     {% autoescape false %}
-        ACTED Feedback received from {{ client.name }}
+        ACTED Feedback received from {{ client.firstname }}
     {% endautoescape %}
 {% endblock %}
 {% block body_html %}
     {% autoescape false %}
-        <p>You have a received a {{ feedback.rating }}/5 rating from {{ client.name }}.</p>
+        <p>You have a received a {{ feedback.rating }}/5 rating from {{ client.firstname }}.</p>
         {% if feedback.feedback is defined %}
             <p>feedback.feedback</p>
         {% endif %}
