--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -288,27 +288,32 @@
                                 <label for="option_<%=option.id%>"></label>
                             </div>
 
-                            <select quot-edit-qty name="qty" class="quantity-select">
-                                <%
-                                    for(var opt = 1; opt < 7; opt++) {
-                                        if(option.qty == opt) {
-                                        %>
-                                            <option selected value="<%=opt%>"><%=opt%></option>
-                                        <%
-                                        } else {
-                                        %>
-                                            <option value="<%=opt%>"><%=opt%></option>
-                                        <%
-                                        }
-                                    }
-                                %>
-                            </select>
+                            {#<select quot-edit-qty name="qty" class="quantity-select">#}
+                                {#<%#}
+                                    {#for(var opt = 1; opt < 7; opt++) {#}
+                                        {#if(option.qty == opt) {#}
+                                        {#%>#}
+                                            {#<option selected value="<%=opt%>"><%=opt%></option>#}
+                                        {#<%#}
+                                        {#} else {#}
+                                        {#%>#}
+                                            {#<option value="<%=opt%>"><%=opt%></option>#}
+                                        {#<%#}
+                                        {#}#}
+                                    {#}#}
+                                {#%>#}
+                            {#</select>#}
+
+                            <input quot-edit-qty name="qty" class="quantity-select" value="<%=option.qty%>" placeholder="<%=option.qty%>">
                             <span>x</span>
-                            <select quot-edit-duration name="duration" class="duration-select">
-                                <option <% if(option.duration == 45) { %> selected <% } %> value="45">45 min</option>
-                                <option <% if(option.duration == 50) { %> selected <% } %> value="50">50 min</option>
-                                <option <% if(option.duration == 55) { %> selected <% } %> value="55">55 min</option>
-                            </select>
+                            <input quot-edit-duration name="duration" class="duration-select" value="<%=option.duration%>" placeholder="<%=option.duration%>">
+
+                            {#<select quot-edit-duration name="duration" class="duration-select">#}
+                                {#<option <% if(option.duration == 45) { %> selected <% } %> value="45">45 min</option>#}
+                                {#<option <% if(option.duration == 50) { %> selected <% } %> value="50">50 min</option>#}
+                                {#<option <% if(option.duration == 55) { %> selected <% } %> value="55">55 min</option>#}
+                            {#</select>#}
+
                             <span class="minutes">min</span>
                             <select quot-edit-price class="price-box" name="price">
                                 <% for(var r = 0; r < option.rates.length; r++) {
