--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -265,55 +265,39 @@
             <% for(var j = 0; j < curPerf.packages.length; j++) {
                 var package = curPerf.packages[j];
                 var packageChecked = package.isSelected ? 'checked' : '';
+                var hiddenCheckbox = (type == 'performance') ? '' : 'hidden';
+                if(type == 'service') {
+                    var toLeft = 'pull-left';
+                    var toRight = 'pull-right';
+                }
+
             %>
 
                 <div package-id="<%=package.id%>" class="row">
-                    <div class="row package">
-                        <div class="custom-checkbox">
+                    <div class="row package <%=toLeft%>">
+                        <div class="custom-checkbox <%=hiddenCheckbox%>">
                             <input select-package package-id="<%=package.id%>" id="package_<%=package.id%>" name="package-check" value="" type="checkbox" <%=packageChecked%> >
                             <label for="package_<%=package.id%>"></label>
                         </div>
                         <label><%=package.name%></label>
                     </div>
 
-
                     <% for(var k = 0; k < package.options.length; k++) {
                         var option = package.options[k];
                         var optionChecked = option.isSelected ? 'checked' : '';
                     %>
                         <!-- Set options -->
-                        <div option-id="<%=option.id%>" class="act-option">
-                            <div class="custom-checkbox">
-                                <input select-option option-id="<%=option.id%>" id="option_<%=option.id%>" name="package-check" value="" type="checkbox" <%=optionChecked%> >
+                        <div option-id="<%=option.id%>" class="act-option <%=toRight%>">
+                            <div class="custom-checkbox <%=hiddenCheckbox%>">
+                                <input select-option option-id="<%=option.id%>" id="option_<%=option.id%>" name="package-check" value="" type="checkbox" <%=optionChecked%>>
                                 <label for="option_<%=option.id%>"></label>
                             </div>
 
-                            {#<select quot-edit-qty name="qty" class="quantity-select">#}
-                                {#<%#}
-                                    {#for(var opt = 1; opt < 7; opt++) {#}
-                                        {#if(option.qty == opt) {#}
-                                        {#%>#}
-                                            {#<option selected value="<%=opt%>"><%=opt%></option>#}
-                                        {#<%#}
-                                        {#} else {#}
-                                        {#%>#}
-                                            {#<option value="<%=opt%>"><%=opt%></option>#}
-                                        {#<%#}
-                                        {#}#}
-                                    {#}#}
-                                {#%>#}
-                            {#</select>#}
+                            <% if(type == 'performance') { %>
 
-                            <input quot-edit-qty name="qty" class="quantity-select" value="<%=option.qty%>" placeholder="<%=option.qty%>">
+                            <input quot-edit-qty name="qty" class="quantity-select" value="<%=option.qty%>" placeholder="<%=option.qty%>" disabled>
                             <span>x</span>
-                            <input quot-edit-duration name="duration" class="duration-select" value="<%=option.duration%>" placeholder="<%=option.duration%>">
-
-                            {#<select quot-edit-duration name="duration" class="duration-select">#}
-                                {#<option <% if(option.duration == 45) { %> selected <% } %> value="45">45 min</option>#}
-                                {#<option <% if(option.duration == 50) { %> selected <% } %> value="50">50 min</option>#}
-                                {#<option <% if(option.duration == 55) { %> selected <% } %> value="55">55 min</option>#}
-                            {#</select>#}
-
+                            <input quot-edit-duration name="duration" class="duration-select" value="<%=option.duration%>" placeholder="<%=option.duration%>" disabled>
                             <span class="minutes">min</span>
                             <select quot-edit-price class="price-box" name="price">
                                 <% for(var r = 0; r < option.rates.length; r++) {
@@ -324,7 +308,15 @@
                                 <option price-id="<%=rate.id%>" <% if(rate.isSelected) { %> selected <% } %>  value="<%=amount%>"><%=amount%></option>
 
                                 <% } %>
+                                <option value="custom">Custom</option>
                             </select>
+
+                            <% } %>
+
+                            <% if(type == 'service') { %>
+                                <input quot-edit-price class="price-box" name="price" value="<%=amount%>" placeholder="<%=amount%>">
+                            <% } %>
+
                             <span>GBP</span>
                         </div>
                     <% } %>
@@ -404,11 +396,12 @@
                             %>
                         </select>
                         <span>x</span>
-                        <select quot-edit-duration name="duration" class="duration-select">
-                            <option <% if(option.duration == 45) { %> selected <% } %> value="45">45 min</option>
-                            <option <% if(option.duration == 50) { %> selected <% } %> value="50">50 min</option>
-                            <option <% if(option.duration == 55) { %> selected <% } %> value="55">55 min</option>
-                        </select>
+                        <input type="number" quot-edit-duration name="duration" class="duration-select extra">
+                        {#<select quot-edit-duration name="duration" class="duration-select">#}
+                            {#<option <% if(option.duration == 45) { %> selected <% } %> value="45">45 min</option>#}
+                            {#<option <% if(option.duration == 50) { %> selected <% } %> value="50">50 min</option>#}
+                            {#<option <% if(option.duration == 55) { %> selected <% } %> value="55">55 min</option>#}
+                        {#</select>#}
                         <span>min</span>
                     </span>
 
@@ -512,11 +505,12 @@
                             %>
                         </select>
                         <span>x</span>
-                        <select quot-edit-duration name="duration" class="duration-select">
-                            <option <% if(option.duration == 45) { %> selected <% } %> value="45">45 min</option>
-                            <option <% if(option.duration == 50) { %> selected <% } %> value="50">50 min</option>
-                            <option <% if(option.duration == 55) { %> selected <% } %> value="55">55 min</option>
-                        </select>
+                        <input type="number" quot-edit-duration name="duration" class="duration-select extra">
+                        {#<select quot-edit-duration name="duration" class="duration-select">#}
+                            {#<option <% if(option.duration == 45) { %> selected <% } %> value="45">45 min</option>#}
+                            {#<option <% if(option.duration == 50) { %> selected <% } %> value="50">50 min</option>#}
+                            {#<option <% if(option.duration == 55) { %> selected <% } %> value="55">55 min</option>#}
+                        {#</select>#}
                         <span>min</span>
                     </span>
                     <% } %>
